--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "ioredis": "^5.7.0",
     "resend": "^6.1.0"
   }
 }
